--- a/android_device/app/build.gradle
+++ b/android_device/app/build.gradle
@@ -30,6 +30,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation "org.java-websocket:Java-WebSocket:1.3.9"
+    implementation "com.bftv.fui:android_device:1.0.3"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
 }
