--- a/android_device/build.gradle
+++ b/android_device/build.gradle
@@ -5,7 +5,13 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url "http://123.126.114.194:8083/repository/maven-3rd/"
+            credentials {
+                username 'xxxx'
+                password 'xxxx'
+            }
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0-alpha13'
@@ -19,7 +25,13 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url "http://123.126.114.194:8083/repository/maven-3rd/"
+            credentials {
+                username 'xxxx'
+                password 'xxxx'
+            }
+        }
     }
 }
 
