--- a/android_device/build.gradle
+++ b/android_device/build.gradle
@@ -8,8 +8,8 @@ buildscript {
         maven {
             url "http://123.126.114.194:8083/repository/maven-3rd/"
             credentials {
-                username 'xxxx'
-                password 'xxxx'
+                username 'guest'
+                password 'guest'
             }
         }
     }
@@ -28,8 +28,8 @@ allprojects {
         maven {
             url "http://123.126.114.194:8083/repository/maven-3rd/"
             credentials {
-                username 'xxxx'
-                password 'xxxx'
+                username 'guest'
+                password 'guest'
             }
         }
     }
